--- a/css/modules.css
+++ b/css/modules.css
@@ -29,19 +29,23 @@ body {
 }
 
 
-/* GRID LAYOUT */
+/* Module selector */
 div#chooser {
-    display: grid;
-    grid-auto-flow: column;
-    grid-template-rows: max-content max-content;
-    grid-template-columns: repeat(5, auto); /* 5 classes of experiments */
-    align-items: baseline;
-    grid-row-gap: 10px;
-    grid-column-gap: 20px;
+    display: flex;
+    width: auto;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: stretch;
+}
+
+div.chooser-overall {
+    border: 1px dashed;
+    border-radius: 5px;
+    padding: 5px;
+    margin: 5px;
 }
 
 div.chooser_modules {
-    height: 100%; /* fill up available space in the grid row so that it looks uniform */
     align-self: center;
 }
 
@@ -54,23 +58,32 @@ div.chooser_text {
 
 /* the list of modules */
 div.chooser_modules {
-    padding: 0;
-    border: 2px dashed;
-    border-radius: 5px;
     text-align: center;
     font-size: 110%;
+    padding: 5px;
 }
 
 /* overall look of the list */
 div.chooser_modules>ul {
     list-style-type: none;
     padding: 0;
-    margin: 15px;
+    margin: 0;
     display: grid;
     grid-auto-flow: column;
-    grid-row-gap: 10px;
-    grid-column-gap: 10px;
-    grid-template-rows: repeat(8, 30px);  /* this is where we can change the height of each box! */
+    grid-row-gap: 8px;
+    grid-column-gap: 8px;
+}
+
+/* set a manual limit on the height of the 1H box */
+div.chooser_modules.h1>ul {
+    grid-template-rows: repeat(8, auto);
+}
+/* then set the 1H None label to be longer */
+li#li_h1_none {
+    grid-column: 1 / 3;
+}
+li#li_h1_none>label {
+    width: 100%;
 }
 
 /* radio buttons */
