--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,18 +1,19 @@
-div#button-container {
-    display: grid;
-    grid-template-columns: 1fr auto 1fr;
-    margin: 30px 0;
+div#buttons {
+    margin: 15px 0;
+    display: flex;
+    flex-flow: row wrap;
     align-items: baseline;
+    justify-content: center;
 }
 
 div#buttons input {
-    position: relative;
+    position: relative;  /* needed for clicking behaviour */
     font-family: inherit;
     border: 1px solid black;
     background-color: #eeeeee;
     border-radius: 0.5em;
     padding: 0.4em 1em;
-    margin: 0 20px;
+    margin: 0 5px;
     transition-property: background-color;
     transition-duration: 0.2s;
     outline: 0;
@@ -30,33 +31,41 @@ div#buttons input:active {
     top: 2px;
 }
 
-
 div#buttons input#download_button {
     font-size: 120%;
 }
 
 div#buttons input#reset_button {
-    margin-left: auto;
     font-size: 80%;
     width: 9em;
     height: 100%;
 }
 
 div#buttons input#faq_button {
-    margin-right: auto;
     font-size: 80%;
     width: 9em;
     height: 100%;
 }
 
-div#devmode {
-    text-align: right;
-    font-size: 70%;
+/* explicit styling when the viewport is small */
+@media (max-width: 641px) {
+    div#buttons {
+        flex-flow: column wrap;
+        align-items: center;
+    }
+    div#buttons input {
+        margin: 3px 0;
+    }
 }
 
 
 /* checkbox hack */
 /* https://css-tricks.com/the-checkbox-hack/ */
+
+div#devmode {
+    text-align: right;
+    font-size: 70%;
+}
 
 .switch {
     position: relative;
