website: make devmode module names smaller
Just so that C_SEHSQC_TOCSY_OR can fit into the width.

--- a/css/modules.css
+++ b/css/modules.css
@@ -106,6 +106,7 @@ li#li_h1_none>label {
     border: 1px solid black;
     padding: 1.5px;
     border-radius: 2px;
+    height: 29px;
     width: 140px;
 }
 
