website: add a warning div
The warnings inside should be updated together with pprog changes.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -224,6 +224,11 @@ sub {
   top: 0.4em;
 }
 
+div#warning {
+    text-align: center;
+    color: #ff0000;
+}
+
 div#faq {
     margin-bottom: 30px;
 }
