--- a/static/css/main.css
+++ b/static/css/main.css
@@ -266,7 +266,7 @@ ol.citation-start {
 }
 
 ol.citation-start li, ol.citation li {
-    :argin: 0 0 1ex 0;
+    margin: 0 0 0.7ex 0;
     list-style: none;
     position: relative;
 }
