website: adjust devmode label font & height

--- a/static/css/modules.css
+++ b/static/css/modules.css
@@ -106,7 +106,7 @@ li#li_h1_none>label {
     border: 1px solid black;
     padding: 1.5px;
     border-radius: 2px;
-    height: 29px;
+    height: auto;
     width: 140px;
 }
 
