--- a/static/css/faq.css
+++ b/static/css/faq.css
@@ -60,7 +60,7 @@ input.toggle-button:checked + label.toggle-label {
 input.toggle-button:checked + label.toggle-label + div.toggle-content {
     border-top-right-radius: 0;
     border-top-left-radius: 0;
-    max-height: 100vh;
+    max-height: 200vh;
     border-color: #797979;
 }
 
@@ -86,6 +86,10 @@ div.toggle-content-inner {
 
 div.toggle-content-inner {
     /* margin: 0 0 1ex 0; */
+}
+
+div.toggle-content-inner > ul > li:not(:last-child) {
+    margin-bottom: 1.5ex;
 }
 
 /* Special ordered lists in FAQ {{{1 */
