--- a/static/css/faq.css
+++ b/static/css/faq.css
@@ -31,7 +31,7 @@ input.toggle-button {
     padding: 0.5em 1em;
     font-size: 100%;
     cursor: pointer;
-    margin: 0.5em 0 0 0;
+    margin: 0.8em 0 0 0;
     background: #f4f4f4;
 }
 
@@ -40,6 +40,7 @@ input.toggle-button {
 }
 
 div.toggle-content {
+    background-color: #fffff2;
     max-height: 0px;
     overflow: hidden;
     border-bottom-left-radius: 4px;
@@ -123,6 +124,8 @@ ol.citation-start li, ol.citation li {
     margin: 0 0 0.7ex 0;
     list-style: none;
     position: relative;
+    font-size: 85%;
+    line-height: 1.5;
 }
 
 ol.citation-start li:before, ol.citation li:before {
